Bug 279441 - Application: Muon Software Center (muon-installer), signal: Segmentation fault
Summary: Application: Muon Software Center (muon-installer), signal: Segmentation fault
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 279523 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-05 11:59 UTC by omega
Modified: 2011-08-06 12:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description omega 2011-08-05 11:59:58 UTC
Application: muon-installer (1.1.90 "Caustic Carrionite")
KDE Platform Version: 4.7.00 (4.7.0)
Qt Version: 4.7.3
Operating System: Linux 3.0.0-7-generic x86_64
Distribution: Ubuntu oneiric (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

muon software center crashed when i browsing in category "browser"

The crash can be reproduced some of the time.

-- Backtrace:
Application: Muon Software Center (muon-installer), signal: Segmentation fault
[Current thread is 1 (Thread 0x7ff3badf8780 (LWP 11791))]

Thread 2 (Thread 0x7ff3a64ab700 (LWP 11792)):
#0  timerSourcePrepareHelper (src=<value optimized out>, timeout=0x7ff3a64aac3c) at kernel/qeventdispatcher_glib.cpp:142
#1  0x00007ff3b9b94d65 in timerSourcePrepare (source=<value optimized out>, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#2  0x00007ff3b4260b52 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ff3b426195d in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007ff3b4261f89 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007ff3b9b957ae in QEventDispatcherGlib::processEvents (this=0x19dd970, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#6  0x00007ff3b9b69c62 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007ff3b9b69e67 in QEventLoop::exec (this=0x7ff3a64aadd0, flags=...) at kernel/qeventloop.cpp:201
#8  0x00007ff3b9a812cf in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#9  0x00007ff3b9b4cc2f in QInotifyFileSystemWatcherEngine::run (this=0x19dca80) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00007ff3b9a83d55 in QThreadPrivate::start (arg=0x19dca80) at thread/qthread_unix.cpp:320
#11 0x00007ff3b4d42d8c in start_thread (arg=0x7ff3a64ab700) at pthread_create.c:304
#12 0x00007ff3b79eb1dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7ff3badf8780 (LWP 11791)):
[KCrash Handler]
#6  QApt::Package::latin1Section (this=0x0) at /build/buildd/qapt-1.1.90/src/package.cpp:244
#7  0x00007ff3ba2f74ec in QApt::Package::section (this=<value optimized out>) at /build/buildd/qapt-1.1.90/src/package.cpp:239
#8  0x000000000041e6fe in Application::addons (this=0x25ee490) at /build/buildd/muon-1.1.90/installer/Application.cpp:306
#9  0x0000000000430034 in ApplicationDetailsWidget::populateAddons (this=0x3464720) at /build/buildd/muon-1.1.90/installer/ApplicationDetailsView/ApplicationDetailsWidget.cpp:669
#10 0x0000000000430891 in ApplicationDetailsWidget::setApplication (this=0x3464720, app=0x25ee490) at /build/buildd/muon-1.1.90/installer/ApplicationDetailsView/ApplicationDetailsWidget.cpp:320
#11 0x0000000000431a85 in ApplicationDetailsView::setApplication (this=0x3486be0, app=0x25ee490) at /build/buildd/muon-1.1.90/installer/ApplicationDetailsView/ApplicationDetailsView.cpp:59
#12 0x000000000042d432 in ApplicationViewWidget::infoButtonClicked (this=0x32f6fa0, app=0x25ee490) at /build/buildd/muon-1.1.90/installer/ApplicationModel/ApplicationViewWidget.cpp:153
#13 0x000000000042d6b4 in ApplicationViewWidget::qt_metacall (this=0x32f6fa0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3136a450) at /build/buildd/muon-1.1.90/obj-x86_64-linux-gnu/installer/ApplicationViewWidget.moc:108
#14 0x00007ff3b9b7d6ea in QMetaObject::activate (sender=0x33a19a0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3136a450) at kernel/qobject.cpp:3278
#15 0x000000000042bd10 in ApplicationDelegate::infoButtonClicked (this=<value optimized out>, _t1=0x25ee490) at /build/buildd/muon-1.1.90/obj-x86_64-linux-gnu/installer/ApplicationDelegate.moc:111
#16 0x000000000042bf04 in ApplicationDelegate::qt_metacall (this=0x33a19a0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3136a580) at /build/buildd/muon-1.1.90/obj-x86_64-linux-gnu/installer/ApplicationDelegate.moc:87
#17 0x00007ff3b9b7d6ea in QMetaObject::activate (sender=0x2731e40, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3136a580) at kernel/qobject.cpp:3278
#18 0x000000000042c85d in ApplicationExtender::infoButtonClicked (this=<value optimized out>, _t1=0x25ee490) at /build/buildd/muon-1.1.90/obj-x86_64-linux-gnu/installer/ApplicationExtender.moc:115
#19 0x000000000042caec in ApplicationExtender::qt_metacall (this=0x2731e40, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff3136a690) at /build/buildd/muon-1.1.90/obj-x86_64-linux-gnu/installer/ApplicationExtender.moc:100
#20 0x00007ff3b9b7d6ea in QMetaObject::activate (sender=0x3480ec0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff3136a690) at kernel/qobject.cpp:3278
#21 0x00007ff3b8819082 in QAbstractButton::clicked (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#22 0x00007ff3b855f57e in QAbstractButtonPrivate::emitClicked (this=0x3359cb0) at widgets/qabstractbutton.cpp:546
#23 0x00007ff3b85608bb in QAbstractButtonPrivate::click (this=0x3359cb0) at widgets/qabstractbutton.cpp:539
#24 0x00007ff3b8560b2c in QAbstractButton::mouseReleaseEvent (this=0x3480ec0, e=0x7fff3136ada0) at widgets/qabstractbutton.cpp:1121
#25 0x00007ff3b81fc8ca in QWidget::event (this=0x3480ec0, event=0x7fff3136ada0) at kernel/qwidget.cpp:8259
#26 0x00007ff3b81ac154 in notify_helper (this=0x1809a30, receiver=0x3480ec0, e=0x7fff3136ada0) at kernel/qapplication.cpp:4467
#27 QApplicationPrivate::notify_helper (this=0x1809a30, receiver=0x3480ec0, e=0x7fff3136ada0) at kernel/qapplication.cpp:4439
#28 0x00007ff3b81b199b in QApplication::notify (this=<value optimized out>, receiver=0x3480ec0, e=0x7fff3136ada0) at kernel/qapplication.cpp:4028
#29 0x00007ff3b938ade6 in KApplication::notify (this=0x7fff3136ba00, receiver=0x3480ec0, event=0x7fff3136ada0) at ../../kdeui/kernel/kapplication.cpp:311
#30 0x00007ff3b9b6aa6c in QCoreApplication::notifyInternal (this=0x7fff3136ba00, receiver=0x3480ec0, event=0x7fff3136ada0) at kernel/qcoreapplication.cpp:731
#31 0x00007ff3b81ad122 in sendEvent (receiver=0x3480ec0, event=0x7fff3136ada0, alienWidget=0x3480ec0, nativeWidget=0x195ae20, buttonDown=0x3480ec0, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#32 QApplicationPrivate::sendMouseEvent (receiver=0x3480ec0, event=0x7fff3136ada0, alienWidget=0x3480ec0, nativeWidget=0x195ae20, buttonDown=0x3480ec0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3127
#33 0x00007ff3b822c1e5 in QETWidget::translateMouseEvent (this=0x195ae20, event=<value optimized out>) at kernel/qapplication_x11.cpp:4562
#34 0x00007ff3b822b15e in QApplication::x11ProcessEvent (this=0x7fff3136ba00, event=0x7fff3136b5c0) at kernel/qapplication_x11.cpp:3684
#35 0x00007ff3b8253ac2 in x11EventSourceDispatch (s=0x18062c0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#36 0x00007ff3b42615bd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007ff3b4261db8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#38 0x00007ff3b4261f89 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007ff3b9b95746 in QEventDispatcherGlib::processEvents (this=0x17df6d0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#40 0x00007ff3b825372e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x00007ff3b9b69c62 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#42 0x00007ff3b9b69e67 in QEventLoop::exec (this=0x7fff3136b990, flags=...) at kernel/qeventloop.cpp:201
#43 0x00007ff3b9b6e07b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#44 0x000000000041bd27 in main (argc=5, argv=0x7fff3136bc78) at /build/buildd/muon-1.1.90/installer/main.cpp:61

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-08-05 22:19:40 UTC
Do you know any more about the circumstances around the crash?

I see from the backtrace that it crashes when you press the "More Info" button. Does it tend to crash when clicking that button for any app in particular? Were you also installing other things at the time you clicked on that button?
Comment 2 omega 2011-08-06 09:02:06 UTC
(In reply to comment #1)
> Do you know any more about the circumstances around the crash?
> 
> I see from the backtrace that it crashes when you press the "More Info" button.
> Does it tend to crash when clicking that button for any app in particular? Were
> you also installing other things at the time you clicked on that button?

i have always this issue when i click "More Info" button only with "Browser Web Firefox" in menu "Internet -> Web Browsers"..with other apps i don't have this issue...i don't install other things at the time i clicked on "more info" button.
Comment 3 Jonathan Thomas 2011-08-06 12:07:05 UTC
*** Bug 279523 has been marked as a duplicate of this bug. ***
Comment 4 Jonathan Thomas 2011-08-06 12:39:55 UTC
Git commit 272c1e5832b000fd5480df9d4254457137b6daed by Jonathan Thomas.
Committed on 06/08/2011 at 14:38.
Pushed by jmthomas into branch 'master'.

Check for addon packages that don't exist, rather than assuming that all of a package's
addons will be found.

BUG: 279441
FIXED-IN: 1.2.0

M  +5    -0    installer/Application.cpp

http://commits.kde.org/muon/272c1e5832b000fd5480df9d4254457137b6daed