Check for addon packages that don't exist, rather than assuming that all of a package's addons will be found.

BUG: 279441
FIXED-IN: 1.2.0